fix social btns on mobile

--- a/style.css
+++ b/style.css
@@ -115,18 +115,8 @@ body {
 }
 
 .social li {
-	display: inline;
-	margin-left: 10px;
-	margin-right: 10px;
-	width: 170px;
 }
 
-.fb-like {
-    position:relative;
-    top:-8px;
-}
-
-}
 
 @media screen and (min-width: 40.5em) and (max-width: 60em) {
 
@@ -180,6 +170,19 @@ body {
 		padding: 0 0 3% 0;
 	}
 	
+
+	.social li {
+		display: inline;
+		margin-left: 10px;
+		margin-right: 10px;
+		width: 170px;
+	}
+
+	.fb-like {
+	    position:relative;
+	    top:-8px;
+	}
+
 }
 
 @media screen and (min-width: 60em) {
@@ -241,5 +244,17 @@ body {
 	#followButton {
 		padding: 0 0 2% 0;
 	}
+
+	.social li {
+		display: inline;
+		margin-left: 10px;
+		margin-right: 10px;
+		width: 170px;
+	}
+
+	.fb-like {
+	    position:relative;
+	    top:-8px;
+	}	
 	
 }
